redis SnapSHOT 기능 구현